Fixes after first review
+ adds scrollview to detail activity
+ adds endless scrolling to the main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,27 @@
     <string name="app_name">Stage1</string>
     <string name="order_popularity">Popularity</string>
     <string name="order_rated">Most rated</string>
+    <string name="synopsis_text_so_long">
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+        Synopsis text so long that fit in the description. ICI ONT MMET LAZSKSFLfs. zuzpzsdfljfl suhf sopdfohjsl sjflkks.
+    </string>
 </resources>
